--- a/ihrm_commom_model/pom.xml
+++ b/ihrm_commom_model/pom.xml
@@ -6,10 +6,13 @@
         <artifactId>Saas-IHRM</artifactId>
         <groupId>org.arrayOfSky</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ihrm_commom_model</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
