--- a/ihrm_company/pom.xml
+++ b/ihrm_company/pom.xml
@@ -6,10 +6,12 @@
         <artifactId>Saas-IHRM</artifactId>
         <groupId>org.arrayOfSky</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath   />
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ihrm_company</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,7 +19,14 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
