--- a/ihrm_system/pom.xml
+++ b/ihrm_system/pom.xml
@@ -6,9 +6,11 @@
         <artifactId>Saas-IHRM</artifactId>
         <groupId>org.arrayOfSky</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath   />
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ihrm_system</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
 
     <dependencies>
@@ -35,7 +37,14 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 
